style.css
/* ... */
.page-navigation-container ul {
	display: block;
	list-style: none;
	margin: 0;
	padding-left: 0;
}
.page-navigation-container ul ul {
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
	-moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
	float: left;
	position: absolute;
	top: 3.65em;
	left: -999em;
	z-index: 99999;
	border-radius: 0px 0px 5px 5px;
	color: #2d2d77;
}
.page-navigation-container ul ul ul {
	left: -999em;
	top: 0;
}
.page-navigation-container ul ul li:hover>ul,
.page-navigation-container ul ul li.focus>ul {
	left: 100%;
}
.page-navigation-container ul li:hover>ul,
.page-navigation-container ul li.focus>ul {
	left: auto;
}
.page-navigation-container li:hover ul li a,
.page-navigation-container li.focus ul li a {
	color: #fff;
}
.page-navigation-container li:hover ul li:hover a,
.page-navigation-container li.focus ul li:hover a {
	background-color: #fff;
	color: #2d2d77;
}
.page-navigation-container li {
	float: left;
	position: relative;
}
.page-navigation-container a {
	display: block;
	text-decoration: none;
}
/* Small menu. */
@media screen and (max-width: 880px) {
	#header-navigation button {
		background-color: transparent;
		color: #000;
	}
	.page-navigation-container ul.sub-menu {
		display: block;
	}
	.page-navigation-container ul ul {
		position: relative;
		top: -20px;
		left: 0;
		z-index: 0;
		border-radius: 0 0 5px 5px;
		text-align: center;
		display: inline-block;
		width: 100%;
		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
		-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
		-moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
	}
	.page-navigation-container ul ul a {
		border-top: 0px solid grey;
		width: 100%;
	}
	.toggled-on #secondary-menu {
		display: block;
	}
	.js .menu-toggle,
	.js .dropdown-toggle {
		display: block;
	}
	.page-navigation-container ul {
		display: none;
	}
	.page-navigation-container .menu-primary-nav-container {
		display: none;
		height: auto;
	}
	.toggled-on .page-navigation-container .menu-primary-nav-container {
		display: block;
	}
	.toggled-on .page-navigation-container ul {
		display: inline-block;
		color: #2d2d77;
	}
	.page-navigation-container a {
		color: #000;
		padding: 9px 14px;
	}
	.page-navigation-container.toggled-on .menu-primary-nav-container {
		width: 100%;
		display: block;
		height: auto;
	}
	.page-navigation-container.toggled-on .menu-primary-nav-container li {
		float: none;
		text-align: center;
	}
	.menu-toggle,
	.dropdown-toggle {
		display: none;
	}
}
.site-main .comment-navigation,
.site-main .posts-navigation,
.site-main .post-navigation {
	margin: 0 0 1.5em;
	overflow: hidden;
}
.comment-navigation .nav-previous,
.posts-navigation .nav-previous,
.post-navigation .nav-previous {
	float: left;
	width: 50%;
}
.comment-navigation .nav-next,
.posts-navigation .nav-next,
.post-navigation .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}
/*************************************
Mocasisin Customizer Imports
************************************/
.slideshow-window {
	background-color: #fff;
	border: 20px solid #fff;
}
a {
	word-wrap: break-word;
}
a.biosoc img {
	display: inline-block;
}
.slideshow-slide-caption {
	font-size: 20px;
}
#blog_subscription-2 {
	max-width: 650px;
}
body div.slideshow-window * img {
	border-radius: 5px;
}
.page-id-12 .jetpack-likes-widget-wrapper {
	display: none;
}
.page-navigation-container li ul li a {
	text-align: -webkit-left;
	font-size: 16px;
}
.sponsor-level-title:after, .sponsor-level-title:before {
	width: 25%;
}
#subscribe-email input {
	width: 80% !important;
}
#subscribe-submit input {
	left: 58%;
	width: 22%;
}
@media screen and (min-width: 880px) {
	#header-navigation {
		position: fixed;
		z-index: 99999;
	}
}
@media screen and (max-width: 880px) {
	#main h2, #main h3, #main h4 {
		margin: 0 30px;
	}
	.sponsor-level-title:after, .sponsor-level-title:before {
		width: 0;
	}
	#blog_subscription-2 {
		transform: none;
	}
	#footer-widget-3 {
		padding-left: 30px;
		padding-right: 30px;
	}
	.page-navigation-container li:hover, .page-navigation-container li.focus {
		background-color: transparent;
	}
	#subscribe-submit input {
		width: 50%;
		left: 42%;
	}
	.page-navigation-container ul.sub-menu {
		padding-left: 0;
		z-index: 9999;
	}
	.page-navigation-container li ul li a {
		text-align: -webkit-center;
	}
	.wcb_widget_sponsors .sponsor-logo img {
		padding: 10px 0 0 16px !important;
	}
	h1.entry-title {
		font-size: 4rem;
	}
}

